Fixed overflow on mobile, removed comments on app.js

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -1,5 +1,9 @@
+* { box-sizing: border-box; }
+
 html, body {
   height: 100%;
+  width: 100%;
+  overflow: hidden;
   margin: 0;
   padding: 0;
   display: flex;
